# oss-claimcheck

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
docs/: application-evidence.md  codex-for-oss-application-draft.md  security.md
docs/plans/: 2026-06-02-untrusted-input-safety-boundaries.md
examples/sample-evidence/: evidence.json  evidence.md
src/link_evidence_pack/: cli.py  core.py  github.py
src/oss_claimcheck/: __init__.py  cli.py  core.py  github.py  safety.py
tests/: test_evidence_pack.py  test_github.py  test_safety.py
