[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "link-evidence-pack"
version = "0.1.0"
description = "Generate adoption-safety evidence packs for OSS tool claims."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Captain Chuchu" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
link-evidence-pack = "link_evidence_pack.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
