[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oss-claimcheck"
version = "0.1.1"
description = "Generate adoption-safety evidence packs for OSS tool claims."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Captain Chuchu" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
oss-claimcheck = "oss_claimcheck.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
